# docs/swagger.json
@@ -6,7 +6,7 @@
     "paths": {
         "/api/account": {
             "get": {
-                "description": "-",
+                "description": "Get Account",
                 "consumes": [
                     "application/json"
                 ],
@@ -14,9 +14,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Get Account"
+                    "Account"
                 ],
-                "summary": "-",
+                "summary": "Get Account",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -40,7 +40,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Delete Account"
+                    "Account"
                 ],
                 "summary": "Delete Account",
                 "parameters": [
@@ -72,7 +72,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Login Account"
+                    "Account"
                 ],
                 "summary": "Login Account",
                 "parameters": [
@@ -129,7 +129,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Create Account"
+                    "Account"
                 ],
                 "summary": "Create New Account",
                 "parameters": [
@@ -184,7 +184,10 @@
                     "202": {
                         "description": "Accepted",
                         "schema": {
-                            "$ref": "#/definitions/models.Transaction"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Transaction"
+                            }
                         }
                     }
                 }
@@ -255,7 +258,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Update Account"
+                    "Account"
                 ],
                 "summary": "Update Account",
                 "parameters": [
@@ -289,7 +292,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Verification Account"
+                    "Account"
                 ],
                 "summary": "Verification Account",
                 "parameters": [
@@ -314,6 +317,38 @@
             }
         },
         "/api/withdraw": {
+            "get": {
+                "description": "API URL For Withdraw History",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Transaction"
+                ],
+                "summary": "Withdraw History",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "mobile",
+                        "name": "seller",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Withdraw"
+                            }
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "API URL For Create Withdraw",
                 "consumes": [
